# guerite

./: .coverage  .dockerignore  .gitignore  Makefile  README.md  SPEC.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.remote.yml  pyproject.toml
.github/workflows/: build-and-push.yml  test.yml
docs/: CONFIGURATION.md  SPEC.md
guerite/: __main__.py  config.py  monitor.py  notifier.py  utils.py
tests/: conftest.py  test_actions_and_notifications.py  test_cli.py  test_config.py  test_config_utils.py  test_crash_recovery_implementation.py  test_critical_fixes.py  test_event_listener.py  test_links_and_images.py  test_monitor.py  test_monitor_additional.py  test_monitor_coverage.py  test_monitor_edge_cases.py  test_monitor_helpers.py  test_monitor_run_once.py  test_monitor_scheduling_and_state.py  test_notifier_restart.py  test_recovery.py  test_restart_and_notifications.py  test_run_once.py  test_timeout_handling.py  test_upgrade_integration.py  test_upgrade_labeling.py  test_upgrade_recovery_scenarios.py
